--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ body{
 }
 
 section{
-  height: 100vh;
+  height: 100vh;;
   padding-top: 3.125rem;
   }
 
@@ -115,8 +115,8 @@ div ul{
 /* Header */
 
 nav{
-  display: flex;
   z-index: 1;
+  display: flex;
   width: 100%;
   justify-content: space-around;
   align-items: center;
@@ -124,29 +124,32 @@ nav{
   top: 0;
   transition: top 0.5s;
   padding-top: 1.875rem;
-  padding-bottom: 1.875rem;
+  padding-bottom: 1.5625rem;
   background-color: #0C1B75;
   background-image: linear-gradient(#02265bf0, #040c22f0);
+  flex-direction: row;
   }
 
-  nav ul{
-    display: flex;
-    list-style: none;
-    text-transform: uppercase;
-    }
-  
-  nav ul li{
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
-    padding: .625rem 1.25rem;
-    background-color:#326a88 ;
-    border-radius: 10px;
-    color: white;
-    }  
-  nav ul li i{
-    padding-right: .625rem;
-    font-size: 1.5625rem;
-    }
+nav ul{
+  display: flex;
+  list-style: none;
+  text-transform: uppercase;
+  }
+
+nav ul li{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+  padding: .625rem 1.25rem;
+  background-color:#326a88 ;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  }  
+nav ul li i{
+  padding-right: .625rem;
+  font-size: 1.5625rem;
+  }
 
 nav ul li:hover{
   background: darkblue;
@@ -168,7 +171,7 @@ nav a{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(0, 33, 116, 0.5), rgba(0, 0, 0, 0.9)), url(img2.jpg) no-repeat fixed;
+  background: linear-gradient(rgba(0, 33, 116, 0.5), rgba(0, 0, 0, 0.9)), url(/4_IMAGENES/img2.jpg) no-repeat fixed;
   background-size: cover;
   }
 
@@ -223,7 +226,7 @@ nav a{
 /* section INFORMACION */
 
 #informacion{
-  background: linear-gradient(rgba(05, 7, 12, 0.7), rgba(5, 7, 12, 0.75)), url(img3.jpg) no-repeat fixed;
+  background: linear-gradient(rgba(05, 7, 12, 0.7), rgba(5, 7, 12, 0.75)), url(/4_IMAGENES/img3.jpg) no-repeat fixed;
   background-size: cover;
   color: #e2e2e9;
 }
@@ -261,7 +264,7 @@ nav a{
 /* section FORMACION */
 
 #formacion{
-  background: linear-gradient(rgba(7, 18, 36, 0.4), rgba(12, 12, 16, 0.9)), url(img1.jpg) no-repeat fixed;
+  background: linear-gradient(rgba(7, 18, 36, 0.4), rgba(12, 12, 16, 0.9)), url(/4_IMAGENES/img1.jpg) no-repeat fixed;
   background-size: cover;
   color: #e2e2e9;
   }
@@ -277,7 +280,6 @@ nav a{
   }
   
 .contenedor{
-  position: relative;
   width: 90%;
   padding: 0em 1.875em 3.125em;
   background: linear-gradient(#02265bf0, #040c22f0);
@@ -456,7 +458,7 @@ nav a{
 /* section CONTACTOS */
 
 #contactos{
-  background: linear-gradient(rgba(7, 18, 36, 0.4), rgba(12, 12, 16, 0.9)), url(img5.jpg) no-repeat fixed;
+  background: linear-gradient(rgba(7, 18, 36, 0.4), rgba(12, 12, 16, 0.9)), url(/4_IMAGENES/img5.jpg) no-repeat fixed;
   background-size: cover;
   color: #e2e2e9;
   }
@@ -564,4 +566,139 @@ footer ul li i{
   color: aliceblue;
   box-shadow: .0125rem .0125rem .1875rem #02265bf0;
   text-shadow: .125rem .125rem .25rem #000000;
+}
+
+/* Dispositivos extra pequeños */
+@media only screen and (max-width: 600px) {
+  nav a{
+    display: none;
+    }
+  nav ul li i{
+      padding-right: .625rem;
+      font-size: 35px;
+      }
+    
+    .contenedor{
+      margin-left: 15px;
+    }
+
+    #informacion p{
+      font-size: 19px;
+      text-align: left;
+    }
+
+    .educacion p{
+      text-align: left;
+    }
+
+    .educacion h4{
+      padding-bottom: 10px;
+    }
+}
+
+/* Dispositivos pequeños */
+@media only screen and (min-width: 600px) {
+  nav a{
+    display: none;
+    }
+  nav ul li i{
+      padding-right: .625rem;
+      font-size: 35px;
+      }
+    
+    .contenedor{
+      margin-left: 15px;
+    }
+
+    #informacion p{
+      font-size: 19px;
+      text-align: left;
+    }
+
+    .educacion p{
+      text-align: left;
+    }
+
+    .educacion h4{
+      padding-bottom: 10px;
+    }
+}
+
+/* dispositivos medianos  */
+@media only screen and (min-width: 768px) {
+  nav a{
+    display: flex;
+    font-size: 19px;
+    padding-left: 2px;
+    padding-right: 2px;
+    }
+
+    nav ul li i{
+      padding-right: .625rem;
+      font-size: 25px;
+      }
+    
+      nav ul{
+        justify-content: left;
+      }
+
+      #informacion p{
+        font-size: 19px;
+        text-align: justify;
+      }
+      .acerca-de p{
+        padding-right: 10%;
+      }
+
+    section h3{
+      font-size: 30px;
+    }
+    .informacion-personal p{
+      padding-left: 14%;
+    }
+
+    .educacion p{
+      padding-left: 13%;
+      font-size: 20px;
+    }
+
+    .contenedor span{
+      font-size: 20px;
+    }
+
+    .contenedor_redes a{
+      font-size: 25px;
+    }
+
+    nav ul li{
+      margin-left: 6px;
+      margin-right: 6px;
+      padding: 8px 1px;
+    
+      }  
+}
+
+/* Dispositivo grandes  */
+@media only screen and (min-width: 1200px) {
+  nav a{
+    display: flex;
+    font-size: 21px;
+    padding-left: 2px;
+    padding-right: 2px;
+    }
+
+    nav ul li{
+      margin-left: 30px;
+      margin-right: 25px;
+      padding: 20px 15px;
+      }  
+
+    nav ul li i{
+        padding-right: .625rem;
+        font-size: 25px;
+        }  
+    nav{
+      padding-bottom: 18px;
+      padding-top: 20px;
+    }
 }
